[package]
name = "levitate"
version = "0.1.2"
edition = "2021"
license = "MIT"
description = "Just works solution to numbers, mainly aimed at floats and mathematical use cases."
repository = "https://github.com/unic0rn9k/levitate"

[dependencies]
paste = "1.0.6"

[features]
fast-floats = []
default = ["fast-floats"]

[profile.release.package."*"]
opt-level = 3

[profile.release]
opt-level = 3
lto=true
codegen-units = 1
